fixes spacing on bottom border on ads

--- a/components/sass/modules/_ad.scss
+++ b/components/sass/modules/_ad.scss
@@ -43,7 +43,7 @@
   }
 
   &:after {
-    margin-top: 1em;
+    margin-top: .5em;
     content: '';
     width: 100%;
     display: block;
